--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="icon" href="logo.png" />
+<meta property="og:image" content="https://saev-token.github.io/saevcoin/logo.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>$SAEV - Meme Coin Battles</title>
