--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <img src="hero2.png" alt="Hero 2">
             <img src="hero3.png" alt="Hero 3">
             <img src="hero4.png" alt="Hero 4">
+            <img src="hero5.png" alt="Hero 5">
+            <img src="hero6.png" alt="Hero 6">
+            <img src="hero7.png" alt="Hero 7">
+            <img src="hero8.png" alt="Hero 8">
+            <img src="hero9.png" alt="Hero 9">
         </div>
     </section>
 <section id="airdrop" style="text-align: center; padding: 50px; background: #1a0033; color: #fff;">
