--- a/index.html
+++ b/index.html
@@ -1,81 +1,92 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bg">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>$SAEV - Meme Coin Battles</title>
-    <link rel="icon" type="image/png" href="logo.png">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="logo.png" />
-<meta property="og:image" content="https://saev-token.github.io/saevcoin/SAEVcoin256x256.png" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>$SAEV Token – Дигитална нумизматика</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body>
-    <header>
-        <h1>🚀 Welcome to $SAEV Universe 🚀</h1>
-        <p class="slogan">The Coin of Ultimate Spas – Join the Memevolution!</p>
-    </header>
+<body class="bg-gray-50 text-gray-800">
+  <!-- Навигация -->
+  <header class="bg-white shadow">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+      <h1 class="text-2xl font-bold text-yellow-700">$SAEV Token</h1>
+      <nav class="space-x-6">
+        <a href="#about" class="hover:text-yellow-600">За проекта</a>
+        <a href="#nfts" class="hover:text-yellow-600">NFT Колекции</a>
+        <a href="#token" class="hover:text-yellow-600">Токен</a>
+        <a href="#whitepaper" class="hover:text-yellow-600">Whitepaper</a>
+        <a href="#contact" class="hover:text-yellow-600">Контакт</a>
+      </nav>
+    </div>
+  </header>
 
-    <section class="airdrop">
-        <h2>🎁 Claim Your Airdrop</h2>
-        <button onclick="alert('Airdrop claimed! (demo only)')">Claim 5000 SAEV</button>
-    </section>
+  <!-- Hero секция -->
+  <section class="bg-gradient-to-r from-yellow-100 to-blue-100 py-20 text-center">
+    <div class="max-w-3xl mx-auto px-4">
+      <h2 class="text-4xl md:text-5xl font-bold text-yellow-700 mb-6">Добре дошли в дигиталната нумизматика</h2>
+      <p class="text-lg text-gray-700 mb-6">$SAEV Token е първият български проект, съчетаващ реални монети и банкноти с блокчейн NFT технологии.</p>
+      <a href="#whitepaper" class="inline-block bg-yellow-600 hover:bg-yellow-700 text-white px-6 py-3 rounded-lg font-semibold">Прочети Whitepaper</a>
+    </div>
+  </section>
 
-    <section class="gallery">
-        <h2>🦸 SAEV Guardians Gallery</h2>
-        <div class="nft-grid">
-            <img src="hero1.png" alt="Hero 1">
-            <img src="hero2.png" alt="Hero 2">
-            <img src="hero3.png" alt="Hero 3">
-            <img src="hero4.png" alt="Hero 4">
-            <img src="hero5.png" alt="Hero 5">
-            <img src="hero6.png" alt="Hero 6">
-            <img src="hero7.png" alt="Hero 7">
-            <img src="hero8.png" alt="Hero 8">
-            <img src="hero9.png" alt="Hero 9">
+  <!-- За проекта -->
+  <section id="about" class="py-16 bg-white">
+    <div class="max-w-5xl mx-auto px-4 text-center">
+      <h3 class="text-3xl font-semibold text-gray-800 mb-6">Какво е $SAEV Token?</h3>
+      <p class="text-gray-600 leading-relaxed">$SAEV Token е нумизматичен блокчейн проект, в който реални монети и банкноти се дигитализират като NFT. Общността събира, търгува и курира колекции, използвайки $SAEV в децентрализирана екосистема.</p>
+    </div>
+  </section>
+
+  <!-- NFT Колекции -->
+  <section id="nfts" class="py-16 bg-gray-50">
+    <div class="max-w-6xl mx-auto px-4">
+      <h3 class="text-3xl font-semibold text-center text-gray-800 mb-8">NFT Колекции</h3>
+      <div class="grid md:grid-cols-3 gap-6">
+        <div class="bg-white shadow rounded-lg p-4 text-center">
+          <h4 class="text-xl font-bold mb-2">Антични монети</h4>
+          <p class="text-gray-600 text-sm">От древна Тракия, Рим и Византия</p>
         </div>
-    </section>
-<section id="airdrop" style="text-align: center; padding: 50px; background: #1a0033; color: #fff;">
-  <h2>🚀 $SAEV Airdrop – Вземи 5,000 SAEV</h2>
-  <img src="airdrop-banner.png" alt="$SAEV Airdrop" style="max-width: 500px; width: 90%; margin: 20px auto;">
-  
-  <button onclick="connectWallet()" style="padding: 15px 30px; font-size: 18px; background: gold; color: black; border: none; border-radius: 10px; cursor: pointer;">Свържи MetaMask</button>
-  
-  <p id="walletAddress" style="margin-top: 15px; font-weight: bold;"></p>
-</section>
+        <div class="bg-white shadow rounded-lg p-4 text-center">
+          <h4 class="text-xl font-bold mb-2">Български банкноти</h4>
+          <p class="text-gray-600 text-sm">Царство България, НРБ, БНБ</p>
+        </div>
+        <div class="bg-white shadow rounded-lg p-4 text-center">
+          <h4 class="text-xl font-bold mb-2">Световни емисии</h4>
+          <p class="text-gray-600 text-sm">Евро, долари, рубли и др.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-<script>
-  async function connectWallet() {
-    if (typeof window.ethereum !== 'undefined') {
-      try {
-        const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-        document.getElementById('walletAddress').innerText = 'Свързан адрес: ' + accounts[0];
+  <!-- SAEV Token -->
+  <section id="token" class="py-16 bg-white">
+    <div class="max-w-4xl mx-auto px-4 text-center">
+      <h3 class="text-3xl font-semibold text-gray-800 mb-6">$SAEV Token – крипто основа на колекционерството</h3>
+      <p class="text-gray-600">$SAEV е BEP-20 токен в BNB Smart Chain, който позволява търговия, възнаграждения и участие в управлението на дигитални нумизматични активи.</p>
+    </div>
+  </section>
 
-        // TODO: Тук можеш да пратиш адреса към Google Sheet или сървър
-        // Пример:
-        // fetch('https://your-backend.com/save-wallet', {
-        //   method: 'POST',
-        //   headers: { 'Content-Type': 'application/json' },
-        //   body: JSON.stringify({ wallet: accounts[0] })
-        // });
-      } catch (err) {
-        alert('Отказан достъп до MetaMask');
-      }
-    } else {
-      alert('Инсталирай MetaMask разширение!');
-    }
-  }
-</script>
-    <section class="battle">
-        <h2>⚔️ Coin Battles</h2>
-        <p>Next battle begins in: <span id="countdown"></span></p>
-        <button onclick="alert('You registered your hero! (demo only)')">Register Your Hero</button>
-    </section>
+  <!-- Whitepaper -->
+  <section id="whitepaper" class="py-16 bg-gray-50">
+    <div class="max-w-4xl mx-auto px-4 text-center">
+      <h3 class="text-3xl font-semibold text-gray-800 mb-6">Whitepaper</h3>
+      <p class="text-gray-600 mb-4">Прочети официалния документ за идеята, токеномиката и бъдещето на $SAEV Token.</p>
+      <a href="whitepaper.pdf" class="bg-blue-700 hover:bg-blue-800 text-white px-6 py-3 rounded-lg">Изтегли PDF</a>
+    </div>
+  </section>
 
-    <footer>
-        <p>© 2025 SAEV Coin. All Memes Reserved.</p>
-    </footer>
+  <!-- Контакт -->
+  <section id="contact" class="py-16 bg-white">
+    <div class="max-w-3xl mx-auto px-4 text-center">
+      <h3 class="text-3xl font-semibold text-gray-800 mb-6">Контакт</h3>
+      <p class="text-gray-600">Свържи се с нас по всяко време на <a href="mailto:saevtoken@abv.bg" class="text-blue-700 underline">saevtoken@abv.bg</a></p>
+    </div>
+  </section>
 
-    <script src="script.js"></script>
+  <footer class="bg-gray-100 text-center py-6 text-sm text-gray-500">
+    © 2025 $SAEV Token. Всички права запазени.
+  </footer>
 </body>
 </html>
