--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <!-- Навигация -->
   <header class="bg-white shadow">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-yellow-700">$SAEV Token</h1>
+      <div class="flex items-center space-x-3">
+        <img src="favicon.ico" alt="$SAEV Token лого" class="w-8 h-8">
+        <h1 class="text-2xl font-bold text-yellow-700">$SAEV Token</h1>
+      </div>
       <nav class="space-x-6">
         <a href="#about" class="hover:text-yellow-600">За проекта</a>
         <a href="#nfts" class="hover:text-yellow-600">NFT Колекции</a>
