--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <nav class="space-x-6">
         <a href="#about" class="hover:text-yellow-600">За проекта</a>
         <a href="#nfts" class="hover:text-yellow-600">NFT Колекции</a>
+        <a href="nft-gallery.html" class="hover:text-yellow-600 font-semibold">Качи NFT</a>
         <a href="#token" class="hover:text-yellow-600">Токен</a>
         <a href="#whitepaper" class="hover:text-yellow-600">Whitepaper</a>
         <a href="#contact" class="hover:text-yellow-600">Контакт</a>
