--- a/nft-gallery.html
+++ b/nft-gallery.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>$SAEV NFT Колекция</title>
   <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body class="bg-gray-50 text-gray-800">
 
