--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
       <h3 class="text-3xl font-semibold text-gray-800 mb-6">$SAEV Token – крипто основа на колекционерството</h3>
       <p class="text-gray-600">$SAEV е BEP-20 токен в BNB Smart Chain, който позволява търговия, възнаграждения и участие в управлението на дигитални нумизматични активи.</p>
     </div>
+    <body>
+  <img src="SAEVcoin256x256.png" alt="$SAEV Token Logo" class="logo">
+</body>
   </section>
 
   <!-- Whitepaper -->
