--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <p class="text-gray-600">$SAEV е BEP-20 токен в BNB Smart Chain, който позволява търговия, възнаграждения и участие в управлението на дигитални нумизматични активи.</p>
     </div>
     <body>
-  <img src="SAEVcoin256x256.png" alt="$SAEV Token Logo" class="logo">
+  <img src="SAEVcoin256x256.png" alt="$SAEV Token Logo" class="logo center">
 </body>
   </section>
 
