--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <section class="bg-gradient-to-r from-yellow-100 to-blue-100 py-20 text-center">
     <div class="max-w-3xl mx-auto px-4">
       <h2 class="text-4xl md:text-5xl font-bold text-yellow-700 mb-6">Добре дошли в дигиталната нумизматика</h2>
-      <p class="text-lg text-gray-700 mb-6">$SAEV Token е първият български проект, съчетаващ реални монети и банкноти с блокчейн NFT технологии. С навлизането на блокчейн технологиите, културното и историческо наследство може да бъде съхранено и споделяно в изцяло нова форма. Проектът $SAEV има за цел да създаде децентрализирана екосистема, която свързва колекционери на монети и банкноти с цифрови активи – NFT. Всеки обект – реален, сканиран и описан, става част от нов вид виртуална колекция, търгувана чрез $SAEV Token в блокчейна на BNB Smart Chain.</p>
+      <p class="text-lg text-gray-700 mb-6">$SAEV Token е първият български проект, съчетаващ реални монети и банкноти с блокчейн NFT технологии.</p>
+      <img src="your-image.jpg" alt="Центрирано изображение" class="mx-auto mb-6">
       <a href="#whitepaper" class="inline-block bg-yellow-600 hover:bg-yellow-700 text-white px-6 py-3 rounded-lg font-semibold">Прочети Whitepaper</a>
     </div>
   </section>
@@ -70,7 +71,6 @@
     <div class="max-w-4xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-semibold text-gray-800 mb-6">$SAEV Token – крипто основа на колекционерството</h3>
       <p class="text-gray-600">$SAEV е BEP-20 токен в BNB Smart Chain, който позволява търговия, възнаграждения и участие в управлението на дигитални нумизматични активи.</p>
-    <img src="SAEVcoin256x256.png" alt="$SAEV Token Logo" class="logo center">
     </div>
   </section>
 
