--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="max-w-3xl mx-auto px-4">
       <h2 class="text-4xl md:text-5xl font-bold text-yellow-700 mb-6">Добре дошли в дигиталната нумизматика</h2>
       <p class="text-lg text-gray-700 mb-6">$SAEV Token е първият български проект, съчетаващ реални монети и банкноти с блокчейн NFT технологии.</p>
-      <img src="Token2.png" class="mx-auto mb-6">
+      <img src="your-image.jpg" alt="Центрирано изображение" class="mx-auto mb-6">
       <a href="#whitepaper" class="inline-block bg-yellow-600 hover:bg-yellow-700 text-white px-6 py-3 rounded-lg font-semibold">Прочети Whitepaper</a>
     </div>
   </section>
@@ -61,6 +61,45 @@
         <div class="bg-white shadow rounded-lg p-4 text-center">
           <h4 class="text-xl font-bold mb-2">Световни емисии</h4>
           <p class="text-gray-600 text-sm">Евро, долари, рубли и др.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Последни монети -->
+  <section id="latest-coins" class="py-16 bg-white">
+    <div class="max-w-7xl mx-auto px-4">
+      <h3 class="text-3xl font-semibold text-center text-gray-800 mb-10">Последно добавени монети</h3>
+      <div class="grid md:grid-cols-3 lg:grid-cols-3 gap-6">
+        <div class="bg-gray-100 rounded-lg shadow p-4 text-center">
+          <img src="coins/1lev_1999.jpg" alt="1 лев 1999" class="mx-auto h-32 object-contain mb-2" />
+          <h4 class="text-lg font-semibold">1 лев</h4>
+          <p class="text-sm text-gray-600">1999, Никола Вапцаров, Биметал</p>
+        </div>
+        <div class="bg-gray-100 rounded-lg shadow p-4 text-center">
+          <img src="coins/2leva_2000.jpg" alt="2 лева 2000" class="mx-auto h-32 object-contain mb-2" />
+          <h4 class="text-lg font-semibold">2 лева</h4>
+          <p class="text-sm text-gray-600">2000, Паисий Хилендарски, Биметал</p>
+        </div>
+        <div class="bg-gray-100 rounded-lg shadow p-4 text-center">
+          <img src="coins/10stotinki_1997.jpg" alt="10 стотинки 1997" class="mx-auto h-32 object-contain mb-2" />
+          <h4 class="text-lg font-semibold">10 стотинки</h4>
+          <p class="text-sm text-gray-600">1997, Медна сплав</p>
+        </div>
+        <div class="bg-gray-100 rounded-lg shadow p-4 text-center">
+          <img src="coins/50stotinki_2005.jpg" alt="50 стотинки 2005" class="mx-auto h-32 object-contain mb-2" />
+          <h4 class="text-lg font-semibold">50 стотинки</h4>
+          <p class="text-sm text-gray-600">2005, Никола Фичев, Биметал</p>
+        </div>
+        <div class="bg-gray-100 rounded-lg shadow p-4 text-center">
+          <img src="coins/5leva_2020.jpg" alt="5 лева 2020" class="mx-auto h-32 object-contain mb-2" />
+          <h4 class="text-lg font-semibold">5 лева</h4>
+          <p class="text-sm text-gray-600">2020, 170 години Иван Вазов</p>
+        </div>
+        <div class="bg-gray-100 rounded-lg shadow p-4 text-center">
+          <img src="coins/1lev_1913.jpg" alt="1 лев 1913" class="mx-auto h-32 object-contain mb-2" />
+          <h4 class="text-lg font-semibold">1 лев</h4>
+          <p class="text-sm text-gray-600">1913, Цар Фердинанд I, Сребро</p>
         </div>
       </div>
     </div>
