--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <p class="text-sm text-gray-600">1999, Никола Вапцаров, Биметал</p>
         </div>
         <div class="bg-gray-100 rounded-lg shadow p-4 text-center">
-          <img src="https://www.coin-database.com/coins/2leva_2000.jpg" alt="2 лева 2000" class="mx-auto h-32 object-contain mb-2" />
+          <img src="https://www.coin-database.com/img/bulgaria/2010v.jpg" alt="2 лева 2010" class="mx-auto h-32 object-contain mb-2" />
           <h4 class="text-lg font-semibold">2 лева</h4>
           <p class="text-sm text-gray-600">2000, Паисий Хилендарски, Биметал</p>
         </div>
