--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="max-w-3xl mx-auto px-4">
       <h2 class="text-4xl md:text-5xl font-bold text-yellow-700 mb-6">Добре дошли в дигиталната нумизматика</h2>
       <p class="text-lg text-gray-700 mb-6">$SAEV Token е първият български проект, съчетаващ реални монети и банкноти с блокчейн NFT технологии.</p>
-      <img src="Token2.png" class="mx-auto mb-6">
+      <img src="your-image.jpg" alt="Центрирано изображение" class="mx-auto mb-6">
       <a href="#whitepaper" class="inline-block bg-yellow-600 hover:bg-yellow-700 text-white px-6 py-3 rounded-lg font-semibold">Прочети Whitepaper</a>
     </div>
   </section>
@@ -42,6 +42,39 @@
     <div class="max-w-5xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-semibold text-gray-800 mb-6">Какво е $SAEV Token?</h3>
       <p class="text-gray-600 leading-relaxed">$SAEV Token е нумизматичен блокчейн проект, в който реални монети и банкноти се дигитализират като NFT. Общността събира, търгува и курира колекции, използвайки $SAEV в децентрализирана екосистема.</p>
+    </div>
+  </section>
+
+  <!-- Такси и услуги -->
+  <section id="fees" class="py-16 bg-yellow-50">
+    <div class="max-w-5xl mx-auto px-4 text-center">
+      <h3 class="text-3xl font-semibold text-gray-800 mb-8">Такси и услуги</h3>
+      <div class="grid md:grid-cols-2 gap-6 text-left">
+        <div class="bg-white p-6 shadow rounded-lg">
+          <h4 class="text-xl font-bold mb-2">Качване на монета</h4>
+          <p class="text-gray-700 mb-2">Такса: 2.50 лв. в $SAEV</p>
+          <p class="text-sm text-gray-500 mb-4">NFT запис в колекцията с верификация</p>
+          <a href="nft-gallery.html" class="text-blue-600 underline">Качи монета</a>
+        </div>
+        <div class="bg-white p-6 shadow rounded-lg">
+          <h4 class="text-xl font-bold mb-2">Регистрация в блокчейна</h4>
+          <p class="text-gray-700 mb-2">Такса: 10.00 лв.</p>
+          <p class="text-sm text-gray-500 mb-4">Създава идентичност и подпис</p>
+          <a href="registration.html" class="text-blue-600 underline">Регистрирай се</a>
+        </div>
+        <div class="bg-white p-6 shadow rounded-lg">
+          <h4 class="text-xl font-bold mb-2">Премиум акаунт</h4>
+          <p class="text-gray-700 mb-2">4.99 лв./месец</p>
+          <p class="text-sm text-gray-500 mb-4">Редакция, статистика и ексклузивни данни</p>
+          <a href="#contact" class="text-blue-600 underline">Пиши ни</a>
+        </div>
+        <div class="bg-white p-6 shadow rounded-lg">
+          <h4 class="text-xl font-bold mb-2">Верифицирана колекция</h4>
+          <p class="text-gray-700 mb-2">25.00 лв. еднократно</p>
+          <p class="text-sm text-gray-500 mb-4">Официален статус за търговци и музеи</p>
+          <a href="#contact" class="text-blue-600 underline">Научи повече</a>
+        </div>
+      </div>
     </div>
   </section>
 
