--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <h1 class="text-2xl font-bold text-yellow-700">$SAEV Token</h1>
       </div>
       <nav>
+        <button id="themeToggle" class="ml-4 text-sm px-3 py-1 border rounded-lg text-gray-600 hover:text-yellow-700 hover:border-yellow-600">
+  🌗 Смени тема
+</button>
         <button id="menu-button" class="md:hidden text-yellow-700 focus:outline-none">
           ☰ Меню
         </button>
