--- a/index.html
+++ b/index.html
@@ -182,5 +182,25 @@
   <footer class="bg-gray-100 text-center py-6 text-sm text-gray-500">
     © 2025 $SAEV Token. Всички права запазени.
   </footer>
+
+  <script>
+  const toggleBtn = document.getElementById('themeToggle');
+  const html = document.documentElement;
+
+  // Запази предпочитание в localStorage
+  if (localStorage.getItem('theme') === 'dark') {
+    html.classList.add('dark');
+  }
+
+  toggleBtn.addEventListener('click', () => {
+    html.classList.toggle('dark');
+    if (html.classList.contains('dark')) {
+      localStorage.setItem('theme', 'dark');
+    } else {
+      localStorage.setItem('theme', 'light');
+    }
+  });
+</script>
+  
 </body>
 </html>
