--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-50 text-gray-800 dark:bg-gray-900 dark:text-gray-100">
   <!-- Навигация -->
-  <header class="bg-white shadow">
+  <header class="bg-white dark:bg-gray-800 shadow">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <div class="flex items-center space-x-3">
         <img src="favicon.ico" alt="$SAEV Token лого" class="w-8 h-8">
@@ -61,6 +61,7 @@
 
   <!-- Такси и услуги -->
   <section id="fees" class="py-16 bg-yellow-50">
+    <section class="bg-white dark:bg-gray-900">
     <div class="max-w-5xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-semibold text-gray-800 mb-8">Такси и услуги</h3>
       <div class="grid md:grid-cols-2 gap-6 text-left">
@@ -94,6 +95,7 @@
 
   <!-- NFT Колекции -->
   <section id="nfts" class="py-16 bg-gray-50">
+    <section class="bg-white dark:bg-gray-900">
     <div class="max-w-6xl mx-auto px-4">
       <h3 class="text-3xl font-semibold text-center text-gray-800 mb-8">NFT Колекции</h3>
       <div class="grid md:grid-cols-3 gap-6">
