--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </section>
 
   <!-- За проекта -->
-  <section id="about" class="py-16 bg-white">
+<section id="about" class="py-16 bg-white dark:bg-gray-800 dark:text-gray-100">
     <div class="max-w-5xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-semibold text-gray-800 mb-6">Какво е $SAEV Token?</h3>
       <p class="text-gray-600 leading-relaxed">$SAEV Token е нумизматичен блокчейн проект, в който реални монети и банкноти се дигитализират като NFT. Общността събира, търгува и курира колекции, използвайки $SAEV в децентрализирана екосистема.</p>
@@ -157,7 +157,7 @@
   </section>
 
   <!-- SAEV Token -->
-  <section id="token" class="py-16 bg-white">
+  <section id="contact" class="py-16 bg-white dark:bg-gray-800 dark:text-gray-100">
     <div class="max-w-4xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-semibold text-gray-800 mb-6">$SAEV Token – крипто основа на колекционерството</h3>
       <p class="text-gray-600">$SAEV е BEP-20 токен в BNB Smart Chain, който позволява търговия, възнаграждения и участие в управлението на дигитални нумизматични активи.</p>
@@ -165,7 +165,7 @@
   </section>
 
   <!-- Whitepaper -->
-  <section id="whitepaper" class="py-16 bg-gray-50">
+  <section id="contact" class="py-16 bg-white dark:bg-gray-800 dark:text-gray-100">
     <div class="max-w-4xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-semibold text-gray-800 mb-6">Whitepaper</h3>
       <p class="text-gray-600 mb-4">Прочети официалния документ за идеята, токеномиката и бъдещето на $SAEV Token.</p>
@@ -174,14 +174,14 @@
   </section>
 
   <!-- Контакт -->
-  <section id="contact" class="py-16 bg-white">
+  <section id="contact" class="py-16 bg-white dark:bg-gray-800 dark:text-gray-100">
     <div class="max-w-3xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-semibold text-gray-800 mb-6">Контакт</h3>
       <p class="text-gray-600">Свържи се с нас по всяко време на <a href="mailto:saevtoken@abv.bg" class="text-blue-700 underline">saevtoken@abv.bg</a></p>
     </div>
   </section>
 
-  <footer class="bg-gray-100 text-center py-6 text-sm text-gray-500">
+  <footer class="bg-gray-100 dark:bg-gray-900 text-center py-6 text-sm text-gray-500 dark:text-gray-400">
     © 2025 $SAEV Token. Всички права запазени.
   </footer>
 
