--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
   </script>
   
   <!-- Hero секция -->
-  <section class="bg-gradient-to-r from-yellow-100 to-blue-100 py-20 text-center">
+   <section class="bg-gradient-to-r from-yellow-100 to-blue-100 dark:from-gray-800 dark:to-gray-700 py-20 text-center">
     <div class="max-w-3xl mx-auto px-4">
       <h2 class="text-4xl md:text-5xl font-bold text-yellow-700 mb-6">Добре дошли в дигиталната нумизматика</h2>
-      <p class="text-lg text-gray-700 mb-6">$SAEV Token е първият български проект, съчетаващ реални монети и банкноти с блокчейн NFT технологии.</p>
+      <p class="text-lg text-gray-700 dark:text-gray-300 mb-6">
+        $SAEV Token е първият български проект, съчетаващ реални монети и банкноти с блокчейн NFT технологии.
+      </p>
       <img src="Token2.png" class="mx-auto mb-6">
       <a href="#whitepaper" class="inline-block bg-yellow-600 hover:bg-yellow-700 text-white px-6 py-3 rounded-lg font-semibold">Прочети Whitepaper</a>
     </div>
